welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: reassignment to val
	if (isBirthday) {speed=speed-5;
                              ^caughtSpeeding:5: error: type mismatch;
 found   : Unit
 required: Int
		if (speed>=81) return 2}
                ^caughtSpeeding:9: error: type mismatch;
 found   : Unit
 required: Int
		if (speed>=81) return 2
                ^